compiler/testData/cli/jvm/XnoInline/nonLocalDisabled.out
compiler/testData/cli/jvm/XnoInline/nonLocalDisabled.kt:3:9: error: non-local returns are not allowed with inlining disabled
        return
        ^^^^^^
compiler/testData/cli/jvm/XnoInline/nonLocalDisabled.kt:7:9: error: non-local returns are not allowed with inlining disabled
        return@a
        ^^^^^^^^
COMPILATION_ERROR
